# pyfwup

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
fwup/: core.py  dfu.py  errors.py  fx3.py  lpc43xx.py  micronucleus.py
fwup_utils/: fwup_util.py  microprog.py
