[build-system]
requires = ["setuptools>=64", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfwup"
description = "Python library for programming various USB bootloaders."
authors = [
    {name = "Great Scott Gadgets", email = "dev@greatscottgadgets.com"},
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "BSD"}

classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
]

dependencies = [
    "importlib_resources; python_version<'3.9'",
    "pyusb",
    "tqdm"
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/greatscottgadgets/pyfwup"
Issues   = "https://github.com/greatscottgadgets/pyfwup/issues"

[project.scripts]
fwup-util = "fwup_utils.fwup_util:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fwup", "fwup_utils"]

[tool.setuptools-git-versioning]
enabled = true
starting_version = "0.4.0"
